--- a/FactoryDesignPattern.csproj
+++ b/FactoryDesignPattern.csproj
@@ -44,14 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Car.cs" />
-    <Compile Include="FactoryDesignPattern\IVehicle.cs" />
+    <Compile Include="Factory\IVehicle.cs" />
     <Compile Include="Motorcycle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FactoryDesignPattern\VehicleFactory.cs" />
+    <Compile Include="Factory\VehicleFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
